# expo-rust-demo-module

./: README.md  expo-module.config.json  package-lock.json  package.json
.github/workflows/: android.yml  ios.yml
android/: build.gradle
android/src/main/java/expo/modules/rustdemomodule/: .gitignore  ExpoRustDemoModule.kt  ExpoRustDemoModuleView.kt
example/: App.tsx  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/expo/modules/rustdemomodule/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/exporustdemomoduleexample/: Info.plist
example/ios/exporustdemomoduleexample.xcodeproj/: project.pbxproj
example/ios/exporustdemomoduleexample.xcodeproj/xcshareddata/xcschemes/: exporustdemomoduleexample.xcscheme
example/ios/exporustdemomoduleexample.xcworkspace/: contents.xcworkspacedata
ios/: ExpoRustDemoModule.podspec  ExpoRustDemoModule.swift  ExpoRustDemoModuleView.swift
rust/: Cargo.toml
rust/expo_rust_demo_module/: Cargo.toml  Makefile  build.rs  uniffi.toml
rust/expo_rust_demo_module/src/: lib.rs
rust/uniffi-builder/: Cargo.toml
src/: ExpoRustDemoModule.ts  ExpoRustDemoModule.types.ts  ExpoRustDemoModuleView.tsx  ExpoRustDemoModuleView.web.tsx  index.ts
