[package]
name = "expo_rust_demo_module"
version = "0.1.0"
edition = "2021"


[lib]
name = "expo_rust_demo_module"
type = ["cdylib", "dylib", "staticlib"]

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = "0.28.1"

[build-dependencies]
uniffi = { version = "0.28.1", features = ["build"] }
