[package]
name = "expo_rust_demo_module"
version = "0.1.0"
edition = "2021"


[lib]
name = "expo_rust_demo_module"

crate-type = [
  "staticlib", # for iOS
  # "rlib",
  "cdylib", # for Android
  "lib",    # for bindings
]


[dependencies]
uniffi = { version = "0.28.1" }

[build-dependencies]
uniffi = { version = "0.28.1", features = ["build", "cli"] }
